[package]
name = "pt-self-writer-decoder"
version = "0.4.0"
edition = "2018"

[dependencies]
structopt = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
memmap = { version = "0.7.0" }
rayon = { version = "1.5" }

self-recorder-packet = { git = "https://gitea.sctbelpa/SCTBElpa/self-recorder-packet.git", rev = "e25058f91e6b95ef3783569ef783c62e39d28c8c" }
