[package]
name = "pt-self-writer-decoder"
version = "0.5.0"
edition = "2024"

[dependencies]
structopt = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
memmap = { version = "0.7.0" }
rayon = { version = "1.5" }
time = { version = "0.3.47", features = ["formatting", "macros"] }

self-recorder-packet = { git = "https://gitea.sctbelpa/SCTBElpa/self-recorder-packet.git", rev = "8408b66a792611e8c96b0a5156d444ce0e6e7fb4" }
#self-recorder-packet = { path = "./self-recorder-packet" }
